[metadata]
name = shapelets
version = 0.1
description = Shapelets is a module providing both reference access to shapelet functions and several significant applications of them in science in astronomy.
long_description = file: README.md, LICENSE.md
keywords = shapelets, image analysis
license = BSD 3-Clause License
classifiers =
    Topic :: Scientific/Engineering :: Physics
    License :: OSI Approved :: GNU Lesser General Public License v2 or later (LGPLv2+)
    Programming Language :: Python :: 3 :: Only

[options]
zip_safe = False
include_package_data = False
packages = find:
install_requires =
    numpy;python_version>'3.7.0'
    scipy;python_version>'3.7.0'
    ngsolve;python_version>'3.7.0'
    configparser;python_version>'3.7.0'
    pyparsing;python_version>'3.7.0'

[options.package_data]


[options.entry_points]
console_scripts =
    pytesting = shapelets.entry_points:pytest_tests

[options.extras_require]
test =
    pytest;python_version>'3.7'
test_ext =
    pytest;python_version>'3.7'
    pytest-xdist;python_version>'3.7'
tab =
    tabulate;python_version>'3.7'
edt =
    edt;python_version>'3.7'
all =
    pytest;python_version>'3.7'
    pytest-xdist;python_version>'3.7'
    tabulate;python_version>'3.7'
    edt;python_version>'3.7'

[options.packages.find]
