[metadata]
name = shapelets
version = 1.1
description = Shapelets is a module providing both reference access to various shapelet functions and some significant applications of them in science and astronomy.
long_description = file: README.md, LICENSE
keywords = shapelets, image analysis
license = GNU Lesser General Public License v2 or later (LGPLv2+)
classifiers =
    Topic :: Scientific/Engineering :: Physics
    License :: OSI Approved :: GNU Lesser General Public License v2 or later (LGPLv2+)
    Programming Language :: Python :: 3 :: Only

[options]
zip_safe = False
include_package_data = True
packages = find:
install_requires =
    numpy;python_version>'3.10.0'
    scipy;python_version>'3.10.0'
    matplotlib;python_version>'3.10.0'
    opencv-python;python_version>'3.10.0'
    configparser;python_version>'3.10.0'
    astropy;python_version>'3.10.0'
    sep;python_version>'3.10.0'
    pdoc;python_version>'3.10.0'

[options.entry_points]
console_scripts =
	shapelets = shapelets._entry_points:_run_shapelets
    shapelets-test = shapelets._entry_points:_run_tests


[options.extras_require]
