[metadata]
name = shapelets
version = 1.1
description = Shapelets is a module providing both reference access to various shapelet functions and some significant applications of them in science and astronomy.
long_description = file: README.md, LICENSE
keywords = shapelets, image analysis
license = GNU Lesser General Public License v2 or later (LGPLv2+)
classifiers =
    Topic :: Scientific/Engineering :: Physics
    License :: OSI Approved :: GNU Lesser General Public License v2 or later (LGPLv2+)
    Programming Language :: Python :: 3 :: Only

[options]
zip_safe = False
include_package_data = True
packages = find:
python_requires = >=3.10.0
install_requires =
    numpy
    scipy
    matplotlib
    opencv-python
    astropy
    sep
    pdoc

[options.entry_points]
console_scripts =
	shapelets = shapelets._entry_points:_run_shapelets
    shapelets-test = shapelets._entry_points:_run_tests


[options.extras_require]
